# ResumeGenerator

./: .gitignore  CMakeLists.txt  EducationEntry.h  ItemTemplateInfo.h  PersonalInfoEntry.h  README.md  TemplateSchema.xsd  WorkExperienceEntry.h  databaseoperations.cpp  databaseoperations.h  educationdatamodel.cpp  educationdatamodel.h  exporter.cpp  exporter.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  pathhelpers.cpp  pathhelpers.h  templateparser.cpp  templateparser.h  test_template.rgtf  vcpkg.json  workexperiencedatamodel.cpp  workexperiencedatamodel.h
